@@ -2,7 +2,7 @@
  * JavaScript for Special:RecentChanges
  */
 ( function () {
-	var rc, $checkboxes, $select;
+	var rc, $checkboxes, $select, namespaceDropdown;
 
 	/**
 	 * @class mw.special.recentchanges
@@ -15,19 +15,29 @@
 		 */
 		updateCheckboxes: function () {
 			// The option element for the 'all' namespace has an empty value
-			var isAllNS = $select.val() === '';
+			var value = $select.val(),
+				isAllNS = value === 'all' || value === '';
 
 			// Iterates over checkboxes and propagate the selected option
 			$checkboxes.toggleClass( 'mw-input-hidden', isAllNS );
 		},
 
 		init: function () {
-			$select = $( '#namespace' );
-			$checkboxes = $( '#nsassociated, #nsinvert' ).closest( '.mw-input-with-label' );
+			$select = $( 'select#namespace' );
+			$checkboxes = $( '#nsassociated, #nsinvert, .contribs-ns-filters' )
+				.closest( '.mw-input-with-label' );
 
-			// Bind to change event of the checkboxes.
-			// The initial state is already set in HTML.
-			$select.on( 'change', rc.updateCheckboxes );
+			if ( $select.length === 0 ) {
+				$select = $( '#namespace select' );
+				if ( $select.length > 0 ) {
+					namespaceDropdown = OO.ui.infuse( $( '#namespace' ).closest( '[data-ooui]' ) );
+					namespaceDropdown.on( 'change', rc.updateCheckboxes );
+				}
+			} else {
+				// Bind to change event of the checkboxes.
+				// The initial state is already set in HTML.
+				$select.on( 'change', rc.updateCheckboxes );
+			}
 		}
 	};
 
