@@ -88,10 +88,6 @@
 	font-weight: bold;
 }
 
-.mw-contributions-form select {
-	vertical-align: middle;
-}
-
 /* Special:EditWatchlist */
 .watchlistredir {
 	font-style: italic;
